--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </button-->
 
     <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="openDialogPerfil()">
+        <button mat-menu-item >
             <mat-icon>account_box</mat-icon>
             <span>Mi Perfil</span>
         </button>
